--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
         <version>1.0.3</version>
     </parent>
 
-    <groupId>com.savoirtech.logging</groupId>
+    <groupId>com.sky.shop</groupId>
     <artifactId>slf4j-json-logger-parent</artifactId>
     <packaging>pom</packaging>
     <version>2.0.3-SNAPSHOT</version>
@@ -87,7 +87,7 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>com.savoirtech.logging</groupId>
+                <groupId>com.sky.shop</groupId>
                 <artifactId>slf4j-json-logger</artifactId>
                 <version>${project.version}</version>
             </dependency>
