--- a/slf4j-json-logger-mockito/pom.xml
+++ b/slf4j-json-logger-mockito/pom.xml
@@ -22,12 +22,12 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>com.savoirtech.logging</groupId>
+    <groupId>com.sky.shop</groupId>
     <artifactId>slf4j-json-logger-parent</artifactId>
     <version>2.0.3-SNAPSHOT</version>
   </parent>
 
-  <groupId>com.savoirtech.logging</groupId>
+  <groupId>com.sky.shop</groupId>
   <artifactId>slf4j-json-logger-testutil</artifactId>
   <packaging>jar</packaging>
 
@@ -58,7 +58,7 @@
 
   <dependencies>
     <dependency>
-      <groupId>com.savoirtech.logging</groupId>
+      <groupId>com.sky.shop</groupId>
       <artifactId>slf4j-json-logger</artifactId>
     </dependency>
 
