--- a/slf4j-json-logger/pom.xml
+++ b/slf4j-json-logger/pom.xml
@@ -22,7 +22,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>com.savoirtech.logging</groupId>
+    <groupId>com.sky.shop</groupId>
     <artifactId>slf4j-json-logger-parent</artifactId>
     <version>2.0.3-SNAPSHOT</version>
   </parent>
